# Postora

./: .gitignore  Cargo.toml  LICENSE  README.md  postora-0.0.5-1.fc44.x86_64.rpm  postora-0.0.8-1.fc44.x86_64.rpm  postora-0.1.6-1.fc44.x86_64.rpm
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/helper/: Cargo.toml
crates/helper/src/: main.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs
crates/planner/tests/: integration.rs
data/applications/: io.github.mahbub_khan25.Postora.desktop
data/metainfo/: io.github.mahbub_khan25.Postora.metainfo.xml
data/polkit-1/actions/: io.github.mahbub_khan25.Postora.policy
packaging/rpm/: postora.spec
