# Developed by mahbub khan <mahbub.aumi@gmail.com>

[workspace]
members = [
    "crates/app",
    "crates/helper",
    "crates/planner",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["mahbub khan <mahbub.aumi@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
