# Developed by mahbub khan <mahbub.aumi@gmail.com>

[package]
name = "postora-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
postora-planner = { path = "../planner" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
